--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="%PUBLIC_URL%/apple-touch-icon-57x57.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/apple-touch-icon-114x114.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/apple-touch-icon-72x72.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/apple-touch-icon-144x144.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/apple-touch-icon-120x120.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/apple-touch-icon-152x152.png" />
-		<link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="%PUBLIC_URL%/icon/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/icon/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/icon/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/icon/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/icon/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/icon/apple-touch-icon-152x152.png" />
+		<link rel="icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-16x16.png" sizes="16x16" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 		<meta name="application-name" content="AKAI MPK Mini editor"/>
 		<meta name="msapplication-TileColor" content="#000000" />
-		<meta name="msapplication-TileImage" content="%PUBLIC_URL%/mstile-144x144.png" />
+		<meta name="msapplication-TileImage" content="%PUBLIC_URL%/icon/mstile-144x144.png" />
 		<!--
 			Notice the use of %PUBLIC_URL% in the tag above.
 			It will be replaced with the URL of the `public` folder during the build.
